[package]
name = "skipchannel"
version = "2.0.1"
authors = ["Catharine J. Manning <catharine.j.manning@gmail.com>", "Sönke Hahn <soenkehahn@gmail.com>"]
description = "skipchannels allow to communicate between threads, but always skip to the last sent value"
repository = "https://github.com/soenkehahn/rust-skipchannel"
keywords = ["channel", "threads", "atomic"]
categories = ["concurrency"]
license = "BSD-3-Clause"
